--- a/orderingservice-local.properties
+++ b/orderingservice-local.properties
@@ -1,15 +1,15 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/orderdb?useSSL=true&serverTimezone=UTC
+spring.datasource.url= jdbc:mysql://localhost:3306/orderdb?useSSL=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 
  
 
-#eureka.client.serviceUrl.defaultZone=http://eureka.server:8761/eureka
-#eureka.client.register-with-eureka=true
-#eureka.client.fetch-registry=true
+
+server.port=8081
+#restaurant.search.item.url= http://localhost:8080/item/id/
+restaurant.search.item.url= http://restaurantsearchservice/item/id/
 
  
 
@@ -24,9 +24,7 @@ password=password
  
 
 
-spring.output.ansi.enabled=ALWAYS
+pring.output.ansi.enabled=ALWAYS
 logging.level.org.springframework=ERROR
 logging.level.com.eatza=DEBUG
 logging.pattern.console=%clr(%d{yy-MM-dd E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(${PID}){faint} %clr(---){faint} %clr([%8.15t]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n
-
- 
