--- a/restaurantsearchservice-local.properties
+++ b/restaurantsearchservice-local.properties
@@ -4,3 +4,32 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+ 
+
+#eureka.client.serviceUrl.defaultZone=http://eureka.server:8761/eureka
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+
+ 
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.instance.preferIpAddress= true
+
+ 
+
+user=user
+password=password
+
+ 
+
+
+spring.output.ansi.enabled=ALWAYS
+logging.level.org.springframework=ERROR
+logging.level.com.eatza=DEBUG
+logging.pattern.console=%clr(%d{yy-MM-dd E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(${PID}){faint} %clr(---){faint} %clr([%8.15t]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n
+
+ 
+
+
+ 
