--- a/orderingservice-local.properties
+++ b/orderingservice-local.properties
@@ -8,8 +8,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 server.port=8081
-#restaurant.search.item.url= http://localhost:8080/item/id/
-restaurant.search.item.url= http://restaurantsearchservice/item/id/
+restaurant.search.item.url= http://localhost:8080/item/id/
+#restaurant.search.item.url= http://restaurantsearchservice/item/id/
 
  
 
